--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-white font-weight-bold">Technology is vast</h1>
+                        <h1 class="text-white font-weight-bold">Technology is vast.</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">We are ready to help you sift through the landscape to find the solutions you need.</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <h4 class="text-white-75 font-weight-light mb-5">
+                            Leading IT support, Security, and software development for Austin and the surrounding
+                            areas.</h4>
+                        <h6 class="text-white-75 font-weight-light mb-5">We are ready to help you sift through the landscape and find solutions.</h6>
                     </div>
                 </div>
             </div>
@@ -70,9 +72,14 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Your business is growing!<br />Here’s how we can help.</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <h5 class="text-white-75 mb-4">
+                            Quick response times, a sense of urgency and expert solutions for security and day to day business.
+                        </h5>
+                        <h5 class="text-white-75 mb-4">
+                            Serving happy clients since 2007.
+                        </h5>
                     </div>
                 </div>
             </div>
@@ -82,26 +89,29 @@
             <div class="container">
                 <h2 class="text-center mt-0">At Your Service</h2>
                 <hr class="divider my-4" />
+                <!-- <h5 class="text-center mt-0">We offer our services as an hourly rate or a monthly service plan.</h5> -->
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="far fa-4x fa-user-headset text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Your IT Department</h3>
-                            <p class="text-muted mb-0">We have the IT helpdesk resources to keep your business running smoothly.</p>
+                            <p class="text-muted mb-0">Expert teams and fast response time to keep your business going.
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="far fa-4x fa-lightbulb-on text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Your Tech Consultant</h3>
-                            <p class="text-muted mb-0">Don't let the high barrier of entry to the latest technology keep you from reaping the benefits.</p>
+                            <p class="text-muted mb-0">You need solutions. Let us help you find them!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="far fa-4x fa-lock text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Your Security Expert</h3>
-                            <p class="text-muted mb-0">Cyber security is more important today than ever. Don't compromise here!</p>
+                            <p class="text-muted mb-0">Most security threats can be prevented. We have a list of
+                                essential steps and monitoring to secure your data safe.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -114,8 +124,43 @@
                 </div>
             </div>
         </section>
+        <!-- About-->
+        <section class="page-section bg-dark pricing-img" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Let's do business.</h2>
+                        <p class="text-white-75 mb-0">We offer two ways of obtaining support.</p>
+                        <hr class="divider light my-4" />
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <i class="far fa-4x fa-clock text-white mb-4"></i>
+                                    <h3 class="text-white h4 mb-2">Hourly</h3>
+                                    <p class="text-white-75 mb-0">
+                                        $120 per hour, pay as needed.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <i class="far fa-4x fa-calendar text-white mb-4"></i>
+                                    <h3 class="text-white h4 mb-2">Monthly</h3>
+                                    <p class="text-white-75 mb-0">
+                                        <!-- Clients who need a fixed budget for their IT services. -->
+                                        Keep costs under control with a fixed monthly rate.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <h5 class="text-white mt-5">No contracts. Be happy with our service, not obligated to it.</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Portfolio-->
-        <div id="portfolio">
+        <!-- <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
@@ -147,14 +192,34 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
         <!-- Call to action-->
-        <section class="page-section bg-dark text-white">
-            <div class="container text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+        <!-- <section class="page-section bg-dark text-white">
+            <div class="container-fluid text-center">
+                <h2 class="mb-4">What our clients have to say.</h2>
+                <hr class="divider my-4" />
+
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                        </a>
+                    </div>
+                </div>
             </div>
-        </section>
+        </section> -->
+
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
