--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                         <div class="mt-5">
                             <i class="far fa-4x fa-user-headset text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Your IT Department</h3>
-                            <p class="text-muted mb-0">Expert teams and fast response time to keep your business going.
-                            </p>
+                            <p class="text-muted mb-0">Expert teams and fast response times to keep your business going.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -111,7 +110,7 @@
                             <i class="far fa-4x fa-lock text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Your Security Expert</h3>
                             <p class="text-muted mb-0">Most security threats can be prevented. We have a list of
-                                essential steps and monitoring to secure your data safe.</p>
+                                essential steps and monitoring to secure your data.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -248,7 +247,7 @@
             <div class="container"><div class="small text-center text-muted">Copyright © 2021 - Texas Liberty Technologies</div></div>
         </footer>
         <!-- Bootstrap core JS-->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
