--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
         </nav>
+
         <!-- Masthead-->
         <header class="masthead">
             <div class="container h-100">
@@ -60,19 +61,19 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <h4 class="text-white-75 font-weight-light mb-5">
-                            Leading IT support, Security, and software development for Austin and the surrounding
-                            areas.</h4>
+                            Leading IT support, security, and software development for Austin and the surrounding areas.</h4>
                         <h6 class="text-white-75 font-weight-light mb-5">We are ready to help you sift through the landscape and find solutions.</h6>
                     </div>
                 </div>
             </div>
         </header>
+
         <!-- About-->
         <section class="page-section bg-primary" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Your business is growing!<br />Here’s how we can help.</h2>
+                        <h2 class="text-white mt-0">Your business is growing.<br />Here's how we can help.</h2>
                         <hr class="divider light my-4" />
                         <h5 class="text-white-75 mb-4">
                             Quick response times, a sense of urgency and expert solutions for security and day to day business.
@@ -84,6 +85,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
@@ -123,12 +125,13 @@
                 </div>
             </div>
         </section>
+
         <!-- About-->
         <section class="page-section bg-dark pricing-img" id="about">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Let's do business.</h2>
+                        <h2 class="text-white mt-0">Let's Do Business.</h2>
                         <p class="text-white-75 mb-0">We offer two ways of obtaining support.</p>
                         <hr class="divider light my-4" />
                         <div class="row">
@@ -137,7 +140,7 @@
                                     <i class="far fa-4x fa-clock text-white mb-4"></i>
                                     <h3 class="text-white h4 mb-2">Hourly</h3>
                                     <p class="text-white-75 mb-0">
-                                        $120 per hour, pay as needed.
+                                        Hourly rate, pay as needed.
                                     </p>
                                 </div>
                             </div>
@@ -158,6 +161,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Portfolio-->
         <!-- <div id="portfolio">
             <div class="container-fluid p-0">
@@ -224,9 +228,11 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
+                        <h2 class="mt-0">Let's Get In Touch.</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                        <p class="text-muted mb-5">
+                            Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible.
+                        </p>
                     </div>
                 </div>
                 <div class="row">
@@ -242,10 +248,12 @@
                 </div>
             </div>
         </section>
+
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container"><div class="small text-center text-muted">Copyright © 2021 - Texas Liberty Technologies</div></div>
         </footer>
+
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
