--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="far fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@yourwebsite.com">info@texaslibertytech.com</a>
+                        <a class="d-block" href="mailto:info@texaslibertytech.com">info@texaslibertytech.com</a>
                     </div>
                 </div>
             </div>
@@ -273,7 +273,7 @@
 
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2021 - Texas Liberty Technologies</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2025 - Texas Liberty Technologies</div></div>
         </footer>
 
         <!-- Bootstrap core JS-->
