--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="far fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (512) 203-7448</div>
+                        <div>(512) 203-7448</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="far fa-envelope fa-3x mb-3 text-muted"></i>
